Implementation codes and remove data mock's, application is work